--- a/Numpy-1.ipynb
+++ b/Numpy-1.ipynb
@@ -656,7 +656,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "id": "765bda37-7d9f-4a5e-8a96-cbe295f3c17b",
    "metadata": {},
    "outputs": [
@@ -675,7 +675,7 @@
     }
    ],
    "source": [
-    "np.random.randn(4,4) #we will see matrices in details"
+    "np.random.randn(4,4)"
    ]
   },
   {
